Fix title size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -82,9 +82,10 @@ input.login:focus {
 .card-title {
   font-family: 'Lato', sans-serif;
   font-weight: 700;
-  font-size: 64px;
+  font-size: 48px;
   color: #E06968;
-  margin: 20px;
+  margin: 10px;
+  margin-top: 20px;
 }
 
 .card-title-sm {
@@ -151,7 +152,7 @@ input.login:focus {
 .primary-text {
   font-family: "Cambay";
   font-weight: regular;
-  font-size: 24px;
+  font-size: 16px;
 }
 
 .primary-margin {
@@ -276,4 +277,12 @@ input[type="checkbox"]
 #toy {
   max-width: 180px;
   margin: 0 0px 40px 60%;
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px) {
+  .card-title {
+    font-size: 64px;
+    margin: 20px;
+  }
 }
